EEC_InitBackup/src/objects/Junction_ChklInsp__c.object
<CustomObject>
    <description>Junction object that manages the N:N relationship between the Standard Checklist Reference and Standard Visit Items objects</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_TVI_ID__c</fullName>
        <externalId>true</externalId>
        <label>External TVI ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Assessed_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, it means that this visit item is only for information and does not need to be assessed during the visit</description>
        <inlineHelpText>If checked, this visit item is only for information and does not need to be assessed during the visit</inlineHelpText>
        <label>Non-Assessed Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Random_Item_Domain__c</fullName>
        <inlineHelpText>Domain name that is used in case of Random Items. These can vary as most random items are associated to standard items in longer visit tools which contains more detailed domains.</inlineHelpText>
        <label>Random Item Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Children Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoptive Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birth Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care of Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Children Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Space (Indoor &amp; Outdoor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routine &amp; Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Random_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this item will be only added if picked as random by the system when using this tool.</inlineHelpText>
        <label>Random Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Checklist_Reference__c</fullName>
        <description>This field implements the master-detail relationship between the master Standard Tool Reference object and the detail JunctionChklInsp object</description>
        <label>Tool</label>
        <referenceTo>Standard_Checklist_Reference__c</referenceTo>
        <relationshipLabel>Associated Visit Items</relationshipLabel>
        <relationshipName>Junction_ChklInsps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Standard_Inspection_Item__c</fullName>
        <description>This field implements the master-detail relationship between the master Standard Inspection Item object and the detail JunctionChklInsp object</description>
        <label>Standard Visit Item</label>
        <referenceTo>Standard_Inspection_Item__c</referenceTo>
        <relationshipLabel>Tool Assignments</relationshipLabel>
        <relationshipName>Junction_ChklInsps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Visit_Mode_Ranking__c</fullName>
        <inlineHelpText>Allows you to sort visit items as they will be displayed in visit mode and on visit summary. Lowest ranking will be displayed first. Ranking should be set for each item. Items with empty rank will be displayed last.</inlineHelpText>
        <label>Visit Mode Ranking</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tools Visit Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JunctCI# {000000}</displayFormat>
        <label>JunctCINo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tools Visit Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disallow_Random_Item_Domain_if_NotRandom</fullName>
        <active>true</active>
        <description>Prohibits a value in Random Item Domain when Random Item is FALSE.</description>
        <errorConditionFormula>NOT(Random_Item__c) &amp;&amp; NOT(ISBLANK( TEXT(Random_Item_Domain__c) ))</errorConditionFormula>
        <errorMessage>A Random Item Domain is not permitted when Random Item is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Random_Item_Domain_if_Random</fullName>
        <active>true</active>
        <description>Requires a value in Random Item Domain when Random Item is TRUE.</description>
        <errorConditionFormula>Random_Item__c &amp;&amp; ISBLANK( TEXT(Random_Item_Domain__c) )</errorConditionFormula>
        <errorDisplayField>Random_Item_Domain__c</errorDisplayField>
        <errorMessage>A Random Item Domain is required when Random Item is checked.</errorMessage>
    </validationRules>
</CustomObject>